force-app/main/default/objects/Critical_Date__c/Critical_Date__c.object-meta.xml
<CustomObject>
    <label>Critical Date</label>
    <nameField>
        <displayFormat>CD-{0000}</displayFormat>
        <label>Critical Date</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Critical Dates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>