force-app/main/default/objects/Critical_Date__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>This field is used to copy account name when critical date trigger is fired.</description>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>