force-app/main/default/objects/Critical_Date__c/fields/Account_Name_Label__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Label__c</fullName>
    <label>Account Name Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>