force-app/main/default/objects/Critical_Date__c/fields/Accrued_Interest_as_of_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Accrued_Interest_as_of_To_Date__c</fullName>
    <label>Accrued Interest as of To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>