force-app/main/default/objects/Critical_Date__c/fields/Conga_Generate_Report__c.field-meta.xml
<CustomField>
    <fullName>Conga_Generate_Report__c</fullName>
    <formula>&quot;/apex/APXTConga4__Conga_Composer?serverUrl=API.Partner_Server_URL_370&quot; &amp;
&quot;&amp;Id=&quot; &amp;  Id  &amp;
&quot;&amp;QueryId=[aggregateResult]&quot; 
&amp;  IF( $Setup.Critical_Dates_Report__c.Business_Unit__c = &#39;ELFI&#39;, &#39;a0p19000002XtQyAAK&#39;,  IF($Setup.Critical_Dates_Report__c.Business_Unit__c = &#39;Rhino&#39;, &#39;a0p19000002P0OSAA0&#39;, &#39;a0p19000002P0OXAA0&#39;)) 
&amp;&quot;?pv0=&quot; &amp; Report_Start_Date__c &amp; &quot;~pv1=&quot; &amp; Report_End_Date__c &amp; &quot;&amp;TemplateId=a0x190000010eFJ&amp;DS7=3&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Generate Report</label>
    <type>Text</type>
</CustomField>