force-app/main/default/objects/Critical_Date__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A/B status</fullName>
            </value>
            <value>
                <fullName>Assessment Funding</fullName>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Examination</fullName>
            </value>
            <value>
                <fullName>Litigation</fullName>
            </value>
            <value>
                <fullName>Mediation</fullName>
            </value>
            <value>
                <fullName>Pre-trial</fullName>
            </value>
            <value>
                <fullName>Trial date</fullName>
            </value>
            <value>
                <fullName>Settled Claim</fullName>
            </value>
            <value>
                <fullName>Trial Decision Date</fullName>
            </value>
            <value>
                <fullName>Other - see notes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>