force-app/main/default/objects/Critical_Date__c/fields/Outstanding_Balance_as_of_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Balance_as_of_To_Date__c</fullName>
    <label>Outstanding Balance as of To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>