force-app/main/default/objects/Critical_Date__c/fields/Report_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_End_Date__c</fullName>
    <formula>TEXT( YEAR( $Setup.Critical_Dates_Report__c.End_Date__c ) ) &amp; &quot;-&quot; &amp; IF( MONTH( $Setup.Critical_Dates_Report__c.End_Date__c ) &lt; 10, &quot;0&quot;, &quot;&quot; ) &amp; TEXT( MONTH( $Setup.Critical_Dates_Report__c.End_Date__c ) ) &amp; &quot;-&quot; &amp; IF( DAY( $Setup.Critical_Dates_Report__c.End_Date__c ) &lt; 10, &quot;0&quot;, &quot;&quot;) &amp; TEXT( DAY( $Setup.Critical_Dates_Report__c.End_Date__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report End Date</label>
    <type>Text</type>
</CustomField>