force-app/main/default/objects/Critical_Date__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Name__c</columns>
    <columns>Accrued_Interest_as_of_To_Date__c</columns>
    <columns>Outstanding_Balance_as_of_To_Date__c</columns>
    <columns>Report_End_Date__c</columns>
    <columns>Report_Start_Date__c</columns>
    <columns>Account_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>